Add content and styles

--- a/index.css
+++ b/index.css
@@ -26,3 +26,64 @@ main {
     display: block;
     text-align: center;
 }
+
+.quote {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    font-style: italic;
+    font-size: 22px;
+}
+
+.bookcover {
+    border: 13px solid white;
+}
+
+.facts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: center;
+}
+
+h2 {
+    text-align: center;
+    font-family: 'Allerta Stencil', sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.fact1 {
+    grid-column: 1 / 1;
+    grid-row: 2 / 2;
+}
+
+.fact2 {
+    grid-column: 2 / 2;
+    grid-row: 2 / 2;
+}
+
+.testimonials {
+    display: flex;
+    justify-content: space-between;
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Allerta Stencil', sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.shroom {
+    width: 80px;
+    padding: 40px;
+}
+
+.cub {
+    width: 45%;
+}
+
+.lost {
+    width: 45%;
+}
