--- a/index.css
+++ b/index.css
@@ -47,6 +47,13 @@ main {
     padding:25px;
 }
 
+.facts > p {
+    padding: 30px;
+    font-size: 16px;
+    font-family: 'Allerta Stencil', sans-serif;
+    border: 4px solid rgb(84, 113, 81);
+}
+
 h2 {
     text-align: center;
     font-family: 'Allerta Stencil', sans-serif;
@@ -54,20 +61,11 @@ h2 {
     text-transform: uppercase;
 }
 
-.fact1 > li {
-    grid-column: 1 / 1;
-    grid-row: 2 / 2;
+li {
+    padding: 10px;
 }
 
-.fact2 {
-    grid-column: 2 / 2;
-    grid-row: 2 / 2;
-}
 
-.fact1 > ul {
-grid-column: 1 / 1;
-grid-row: 1 / 1;
-}
 
 .testimonials {
     display: flex;
