--- a/index.css
+++ b/index.css
@@ -44,7 +44,8 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     justify-items: center;
-    padding:25px;
+    padding: 25px;
+    width: 100%;
 }
 
 .facts > p {
@@ -52,6 +53,7 @@ main {
     font-size: 16px;
     font-family: 'Allerta Stencil', sans-serif;
     border: 4px solid rgb(84, 113, 81);
+    width: 100%;
 }
 
 h2 {
@@ -63,6 +65,11 @@ h2 {
 
 li {
     padding: 10px;
+    width: 100%;
+}
+
+p > ul {
+    width: 100%;
 }
 
 
